--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
             <p> cv. kongdjie hamparan rasa </p><br>
             <li><a href="#home" onclick="toggleMenu();">Home</a></li>
             <li><a href="#profile">PROFILE</a></li>
-            <li><a href="#produk">product</a></li>
+            <li><a href="#Produk">product</a></li>
             <li><a href="#franchise">FRANCHISE</a></li>
             <li><a href="#about" onclick="toggleMenu();">about</a></li>
             <li><a href="#location" onclick="toggleMenu();">location</a></li>
